Added ClassNeedsSub model for specific classes instead of all classes

--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -5,12 +5,15 @@
     <title>Set Substitution</title>
 </head>
 <body>
+{{ form }}
     <form action="" method="post">
-        <select>
-            {% for c in classes %}
-            <option>{{ c }}</option>
-            {% endfor %}
-        </select>
+        <label> Class:
+            <select id="t">
+                {% for c in classes %}
+                <option>{{ c }}</option>
+                {% endfor %}
+            </select>
+        </label>
     </form>
 </body>
 </html>
