--- a/timetable/templates/reportAbsence.html
+++ b/timetable/templates/reportAbsence.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:xlink="">
-<head>
-
-
-
-    <meta charset="UTF-8">
-    <title>Report Absence</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-
-
+{% extends "base.html" %}
+{% block content %}
 <div class="container">
 {% if messages %}
     {% for message in messages %}
     <div{% if message.tags %} class="alert alert-success {{ message.tags }}"{% endif %}>{{ message }}</div>
-
-
-
     {% endfor %}
 {% endif %}
+
  <form action = "" method="post">
         {% csrf_token %}
     {% for field in form %}
@@ -31,5 +17,4 @@
      <button type="submit" class="btn btn-outline-primary">Submit</button>
     </form>
     </div>
-</body>
-</html>
+{% endblock %}
