--- a/timetable/templates/reportAbsence.html
+++ b/timetable/templates/reportAbsence.html
@@ -10,8 +10,10 @@
  <form action = "" method="post">
         {% csrf_token %}
     {% for field in form %}
+        <div class="field">
         <label class="form-label" for="{{ field.auto_id }}">{{ field.label }}</label>
         {{ field }}
+        </div>
     {% endfor %}
  <br>
      <button type="submit" class="btn btn-outline-primary">Submit</button>
