--- a/timetable/templates/base.html
+++ b/timetable/templates/base.html
@@ -12,7 +12,7 @@
         {% block sidebar %}
               <a class="active" href="#home">My Subs</a>
               <a href="#news">Report Absence</a>
-              <a id="logout" href="#about">Logout</a>
+              <a id="logout" href="../accounts/logout">Logout</a>
         {% endblock %}
     </div>
     <div class="content">
