--- a/timetable/templates/reportAbsence.html
+++ b/timetable/templates/reportAbsence.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
 {% if messages %}
     {% for message in messages %}
-    <div{% if message.tags %} class="alert alert-success {{ message.tags }}"{% endif %}>{{ message }}</div>
+    <div{% if message.tags %} class="alert {{ message.tags }}"{% endif %}>{{ message }}</div>
     {% endfor %}
 {% endif %}
+    <div class="container">
+
+
 
  <form action = "" method="post">
         {% csrf_token %}
