--- a/timetable/templates/reportAbsence.html
+++ b/timetable/templates/reportAbsence.html
@@ -18,7 +18,7 @@
         </div>
     {% endfor %}
  <br>
-     <button type="submit" class="btn btn-outline-primary">Submit</button>
+     <button type="submit" >Submit</button>
     </form>
     </div>
 {% endblock %}
