--- a/timetable/templates/registration/login.html
+++ b/timetable/templates/registration/login.html
@@ -8,21 +8,24 @@
 <body>
 
 
-<div class="alert">
   {% if form.errors %}
+      <div class="alert">
     <p>Your username and password didn't match. Please try again.</p>
+      </div>
   {% endif %}
 
   {% if next %}
+      <div class="alert">
     {% if user.is_authenticated %}
       <p>Your account doesn't have access to this page. To proceed,
       please login with an account that has access.</p>
     {% else %}
       <p>Please login to see this page.</p>
     {% endif %}
+      </div>
   {% endif %}
-</div>
-<div class="container">
+
+<div class="container" style="margin-top:50px">
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     <table>
