--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -5,14 +5,21 @@
     <title>Set Substitution</title>
 </head>
 <body>
-    <form action="" method="post">
-
-            <select id="t">
-                {% for c in classes %}
-                <option>{{ c }}</option>
-                {% endfor %}
-            </select>
-
-    </form>
+<div>
+    <label >Make</label>
+    <select name="make" hx-get="/models" hx-target="#models" hx-indicator=".htmx-indicator">
+      <option value="audi">Audi</option>
+      <option value="toyota">Toyota</option>
+      <option value="bmw">BMW</option>
+    </select>
+  </div>
+  <div>
+    <label>Model</label>
+    <select id="models" name="model">
+      <option value="a1">A1</option>
+      ...
+    </select>
+    <img class="htmx-indicator" width="20" src="/img/bars.svg">
+</div>
 </body>
 </html>
