--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -3,23 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Set Substitution</title>
+
 </head>
 <body>
 <div>
-    <label >Make</label>
-    <select name="make" hx-get="/models" hx-target="#models" hx-indicator=".htmx-indicator">
-      <option value="audi">Audi</option>
-      <option value="toyota">Toyota</option>
-      <option value="bmw">BMW</option>
-    </select>
-  </div>
-  <div>
-    <label>Model</label>
-    <select id="models" name="model">
-      <option value="a1">A1</option>
-      ...
-    </select>
-    <img class="htmx-indicator" width="20" src="/img/bars.svg">
+<form method="post">
+    {% csrf_token %}
+    {% for field in form %}
+    {{ field }}
+    {% endfor %}
+    <input type="submit">
+</form>
 </div>
+  <script>
+        const districtSelect = document.getElementById('sub');
+        const branchSelect = document.getElementById('teacher');
+
+        districtSelect.addEventListener('change', (event) => {
+        const selectedDistrict = event.target.value;
+        const url = `/get/${selectedDistrict}`;
+        console.log(selectedDistrict)
+        fetch(url)
+        .then(response => response.json())
+        .then(data => {
+        branchSelect.innerHTML = '';
+        console.log(data)
+        data.availableTeachers.forEach((branch) => {
+        const option = document.createElement('option');
+        option.value = branch.id;
+        option.text = branch.name;
+        branchSelect.appendChild(option);
+        });
+        });
+        });
+    </script>
 </body>
 </html>
