--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Set Substitution</title>
-
-</head>
-<body>
-<div>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container">
 <form method="post">
     {% csrf_token %}
     {% for field in form %}
@@ -15,7 +9,7 @@
     <input type="submit">
 </form>
 </div>
-  <script>
+    <script>
         const districtSelect = document.getElementById('sub');
         const branchSelect = document.getElementById('teacher');
 
@@ -37,5 +31,5 @@
         });
         });
     </script>
-</body>
-</html>
+{% endblock %}
+
