hour 7 (half an hour): worked on frontend, not perfect but better

--- a/timetable/templates/registration/login.html
+++ b/timetable/templates/registration/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">    <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body style="    background-color: #D8EFD3;">
 
 
   {% if form.errors %}
