--- a/static/sidebar.css
+++ b/static/sidebar.css
@@ -20,6 +20,7 @@
   color: black;
   padding: 16px;
   text-decoration: none;
+  font-family: helvetica, arial, sans-serif;
 }
 
 /* Active/current link */
