--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -58,7 +58,7 @@ input[type=text],input[type=password]{
     box-sizing: border-box;
 }
 body{
-    background-color: #D8EFD3;
+    background-color: #F4F3F2;
     width:100%;
     height: 100%;
     margin:0;
