--- a/timetable/templates/base.html
+++ b/timetable/templates/base.html
@@ -10,9 +10,12 @@
 <body>
     <div class="sidebar">
         {% block sidebar %}
-              <a class="{% if request.resolver_match.url_name == "showsubs" %}active{% endif %}" href="../mysubs">My Subs</a>
-              <a class="{% if request.resolver_match.url_name == "reportAbsence" %}active{% endif %}" href="../report">Report Absence</a>
-              <a id="logout" href="../accounts/logout">Logout</a>
+              <a class="{% if request.resolver_match.url_name == "showsubs" %}active{% endif %}" href="">My Subs</a>
+              <a class="{% if request.resolver_match.url_name == "reportAbsence" %}active{% endif %}" href="{% url 'reportAbsence' %}">Report Absence</a>
+            {% if perms.timetable.add_classneedssub %}
+                <a class="{% if request.resolver_match.url_name == "sub" %}active{% endif %}" href="{% url 'sub' %}">Set Substitution</a>
+            {% endif %}
+              <a id="logout" href="{% url 'logout' %}">Logout</a>
         {% endblock %}
     </div>
     <div class="content">
