--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -6,7 +6,7 @@
     {% for field in form %}
         <div class="field">{{ field }}</div>
     {% endfor %}
-    <input type="submit">
+    <input type="submit" value="change">
 </form>
 </div>
     <script>
