--- a/static/sidebar.css
+++ b/static/sidebar.css
@@ -41,6 +41,10 @@ div.content {
   padding: 1px 16px;
   height: 1000px;
 }
+.content:dir(rtl){
+  margin-left: 0;
+  margin-right: 200px;
+}
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-width: 700px) {
