--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block content %}
 <div class="container">
 <form method="post">
@@ -6,7 +7,7 @@
     {% for field in form %}
         <div class="field">{{ field }}</div>
     {% endfor %}
-    <input type="submit" value="change">
+    <input type="submit" value="{% trans "change" %}">
 </form>
 </div>
     <script>
