Dockerized the project!

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,9 @@
                 style="font-family: helvetica, arial, sans-serif;
                 font-size: xxx-large;
                 text-align: center;
+                margin:auto;
         ">
             {%  trans "No Subs For today!" %}</h1>
     {% endif %}
-</div>
 </body>
 </html>
