--- a/templates/table.html
+++ b/templates/table.html
@@ -9,7 +9,9 @@
             text-align: center;
             color: #343a40;
         }
-
+        .selected{
+            background-color: rebeccapurple;
+        }
         table {
             border-collapse: collapse;
             margin: 20px auto;
@@ -22,7 +24,7 @@
             padding: 10px 20px;
             text-align: center;
         }
-        input {
+        button{
             border: 1px solid #dee2e6;
             padding: 20px 50px;
             text-align: center;
@@ -37,59 +39,67 @@
         }
     </style>
 <table>
-        <tr>
-            <th>08:30</th>
-            <td><input id="Sunday-8:30" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Monday-8:30" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Tuesday-8:30" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Wednesday-8:30" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Thursday-8:30" onClick="ButtonClick(this)"  type="button"></td>
+    <tr>
+        <th>08:30</th>
+        <td><button id="Sunday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Monday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Tuesday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Wednesday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Thursday-08:30" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th>09:15</th>
+        <td><button id="Sunday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Monday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Tuesday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Wednesday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Thursday-09:15" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th>10:07</th>
+        <td><button id="Sunday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Monday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Tuesday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Wednesday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Thursday-10:07" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th colspan="6">11:00</th>
+    </tr>
+    <tr>
+        <th>11:45</th>
+        <td><button id="Sunday-11:45" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Monday-11:45" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Tuesday-11:45" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Wednesday-11:45" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th>12:45</th>
+        <td><button id="Sunday-12:45" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Monday-12:45" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Tuesday-12:45" onClick="ButtonClick(this)"></button></td>
+        <td><button id="Wednesday-12:45" onClick="ButtonClick(this)"></button></td>
+    </tr>
+</table>
 
-        </tr>
-        <tr>
-            <th>09:15</th>
-            <td><input id="Sunday-9:15" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Monday-9:15" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Tuesday-9:15" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Wednesday-9:15" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Thursday-9:15" onClick="ButtonClick(this)"  type="button"></td>
 
-        </tr>
-        <tr>
-            <th>10:07</th>
-            <td><input id="Sunday-10:07" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Monday-10:07" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Tuesday-10:07" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Wednesday-10:07" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Thursday-10:07" onClick="ButtonClick(this)"  type="button"></td>
-
-        </tr>
-        <tr>
-            <th colspan="6">11:00</th>
-        </tr>
-        <tr>
-            <th>11:45</th>
-            <td><input id="Sunday-11:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Monday-11:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Tuesday-11:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Wednesday-11:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Thursday-11:45" onClick="ButtonClick(this)"  type="button"></td>
-
-        </tr>
-        <tr>
-            <th>12:45</th>
-            <td><input id="Sunday-12:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Monday-12:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Tuesday-12:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Wednesday-12:45" onClick="ButtonClick(this)"  type="button"></td>
-            <td><input id="Thursday-12:45" onClick="ButtonClick(this)"  type="button"></td>
-
-        </tr>
-    </table>
+<input type="text" required readonly id="output">
 <script>
-    function changeOptions(){
-        const selectedClass = 3;
-        const url = `http://127.0.0.1:8000/getClasses/${selectedClass}`;
+    function resetBoard(){
+        const output = document.getElementById("output")
+        const buttons = document.getElementsByTagName("button")
+        for(let k=0;k<buttons.length;k++){
+            buttons[k].disabled = false
+            buttons[k].style.background = ""
+            buttons[k].className = ""
+        }
+        output.value = ""
+    }
+    const TeacherSelect = document.getElementById("teacher")
+    function changeTimetable(){
+        resetBoard()
+        const selectedClass = TeacherSelect;
+        const url = `http://127.0.0.1:8000/getClasses/${selectedClass.value}`;
         console.log(selectedClass)
         fetch(url)
         .then(response => response.json())
@@ -97,13 +107,33 @@
         data.classesTimes.forEach((branch) => {
             console.log(branch.day + "-" + branch.hour)
             const doc = document.getElementById(branch.day + "-" + branch.hour)
-            doc.onclick = ""
+            doc.disabled = true
             doc.style.background = "red";
         })})}
-    changeOptions()
+    changeTimetable()
+    TeacherSelect.addEventListener('change', (event) => changeTimetable(event))
 </script>
 <script>
+    output = document.getElementById("output")
+    const RoomSelect = document.getElementById("room")
     function ButtonClick(test){
-        alert(test.id)
+        buttons = document.getElementsByTagName("button")
+        console.log((buttons.length))
+        for(let i=0;i<buttons.length;i++){
+            buttons[i].className = ""
+        }
+        test.className = "selected"
+        output.value = test.id
+        RoomSelect.innerHTML = '';
+        const arr = test.id.split("-")
+        fetch(`{% url "possible_rooms" %}?hour=${arr[1]}&day=${arr[0]}`)
+        .then(response => response.json())
+        .then(data => {
+        data.availableRooms.forEach((branch) => {
+            option = document.createElement("option")
+            option.value = branch.id
+            option.text = branch.name
+            RoomSelect.append(option)
+        })})
     }
 </script>
