--- a/templates/setClasses.html
+++ b/templates/setClasses.html
@@ -1,18 +1,171 @@
 {% extends 'base.html' %}
+{% load i18n %}
+
 {% block content %}
     <div class="container">
     <form action="{% url "setClasses" %}" method="post">
         {% csrf_token %}
-        {{ form.name.label }}
-        {{ form.name }}
-        {{ form.teacher.label }}
-        {{ form.teacher }}       
-        {{ form.day_of_week }}
-        {{ form.hour }}
-        {{ form.room }}
-        {% include "table.html" %}
+        <div class="two-fields">
+            {{ form.name }}
+            {{ form.teacher }}
+        </div>
+        <table>
+    <tr>
+        <th>08:30</th>
+        <td><button disabled type="button" id="Sunday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Monday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Tuesday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Wednesday-08:30" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Thursday-08:30" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th>09:15</th>
+        <td><button disabled type="button" id="Sunday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Monday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Tuesday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Wednesday-09:15" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Thursday-09:15" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th>10:07</th>
+        <td><button disabled type="button" id="Sunday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Monday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Tuesday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Wednesday-10:07" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Thursday-10:07" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th colspan="6">11:00</th>
+    </tr>
+    <tr>
+        <th>11:45</th>
+        <td><button disabled type="button" id="Sunday-11:45" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Monday-11:45" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Tuesday-11:45" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Wednesday-11:45" onClick="ButtonClick(this)"></button></td>
+    </tr>
+    <tr>
+        <th>12:45</th>
+        <td><button disabled type="button" id="Sunday-12:45" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Monday-12:45" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Tuesday-12:45" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled type="button" id="Wednesday-12:45" onClick="ButtonClick(this)"></button></td>
+    </tr>
+</table>
 
-        <input type="submit">
+        <div class="two-fields">{{ form.day_of_week }}{{ form.hour }}</div>
+        {{ form.room }}
+
+        <input type="submit"  value="{% trans "Add Class" %}">
     </form>
+{#    a script to act when the teacher field is changed and get hours where teacher cant teach#}
+    <script>
+    function resetBoard(){
+        const hour = document.getElementById("hour")
+        const day = document.getElementById("day")
+        const buttons = document.getElementsByTagName("button")
+        for(let k=0;k<buttons.length;k++){
+            buttons[k].disabled = false
+            buttons[k].style.background = ""
+            buttons[k].className = ""
+        }
+        hour.value = ""
+        day.value = ""
+    }
+    const TeacherSelect = document.getElementById("teacher")
+    function changeTimetable(){
+        resetBoard()
+        const selectedClass = TeacherSelect;
+        const url = `http://127.0.0.1:8000/getClasses/${selectedClass.value}`;
+        console.log(selectedClass)
+        fetch(url)
+        .then(response => response.json())
+        .then(data => {
+        data.classesTimes.forEach((branch) => {
+            console.log(branch.day + "-" + branch.hour)
+            const doc = document.getElementById(branch.day + "-" + branch.hour)
+            doc.disabled = true
+            doc.style.background = "lightgrey";
+        })})}
+    TeacherSelect.addEventListener('change', (event) => changeTimetable(event))
+</script>
+    <script>
+
+    let day
+    let hour
+    hourField = document.getElementById("hour")
+    dayField = document.getElementById("day")
+    const RoomSelect = document.getElementById("room")
+    let options = RoomSelect.options;
+    function getOptionByText (a) {
+        for (let i = 0; i < options.length; i++) {
+            if (Number(options[i].value) === a) {
+                return options[i]
+            }
+        }
+        return null
+    }
+    function ButtonClick(test){
+        RoomSelect.disabled=false;
+        buttons = document.getElementsByTagName("button")
+        for(let i=0;i<buttons.length;i++){
+            buttons[i].className = ""
+        }
+        for (let i = 0; i < options.length; i++) {
+            options[i].hidden = false
+        }
+        RoomSelect.selectedIndex = 0
+        test.className = "selected";
+        [day , hour] = test.id.split("-")
+        hourField.value = hour
+        dayField.value = day
+        fetch(`{% url "possible_rooms" %}?hour=${hour}&day=${day}`)
+        .then(response => response.json())
+        .then(data => {
+        data.availableRooms.forEach((branch) => {
+            getOptionByText(branch.id).hidden = true
+        })})
+    }
+</script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            text-align: center;
+            color: #343a40;
+        }
+        .selected{
+            background-color: rebeccapurple;
+        }
+        table {
+            border-collapse: collapse;
+            margin: 20px auto;
+            background-color: #fff;
+            border: 2px solid #dee2e6;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        th{
+            border: 1px solid #dee2e6;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        button{
+            border: 1px solid #dee2e6;
+            padding: 20px 50px;
+            text-align: center;
+            background-color: white;
+        }
+        th {
+            background-color: #f2f2f2;
+            color: #343a40;
+        }
+        td{
+            padding: 0;
+        }
+    </style>
     </div>
 {% endblock %}
